https_webapp/webapp.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
spec:
  type: NodePort
  selector:
    app: webapp-demo
    env: test
  ports:
  - name: http
    protocol: "TCP"
    port: 30000
    nodePort: 30000
---
apiVersion: "apps/v1beta1"
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: webapp-demo
        env: test
    spec:
      containers:
        - name: uodashboard
          image: mohitsharma44/uodashboard-container:v1.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 30000
              protocol: TCP
