https_webapp/ingress-resource.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  tls:
    - hosts:
        - foo.bar
  rules:
    - host: foo.bar
      http:
        paths:
          - path: /
            backend:
              serviceName: webapp-svc
              servicePort: 30000
